2005-11-11  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/checkbutton.py (CheckButton.prop_set_data_type): 
	Accept string here.

	* kiwi/ui/widgets/proxy.py (WidgetMixinSupportValidation): Refactor
	emitting of validation-changed since we also need to emit it when
	calling set_[valid|invalid|blank] and not only in validate_data.
	Fixes validation of mandatory entry with completion enabled.

2005-11-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxies.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/spinbutton.py:
	Move validate_data out of read, and do it manually afterwards,
	there's only two call sites anyway.

2005-11-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gadgets.py:
	* kiwi/ui/views.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/list.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/spinbutton.py:
	* kiwi/ui/widgets/textview.py:
	* kiwi/utils.py:

	Add new method utils.type_register, use it everywhere.
	
2005-11-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/proxy.py
	(WidgetMixinSupportValidation.validate_data): Only set blank for
	mandatory widgets and when data is empty. Always convert '' to None
	for non-string types.

	* kiwi/ui/widgets/entry.py (Entry.read): Remove a couple of big hacks

2005-11-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py (Entry.read): Add a hack to try to fix 
	validation for empty entries.

	* kiwi/controllers.py (BaseController.__init__): Add support for 
	automatic keyboard accelerators of type key_name or key_modifier_name.

	* kiwi/ui/widgets/proxy.py (WidgetMixinSupportValidation.set_invalid): 
	Only connect to done here, that's the only place where we need to 
	use it. When done, set text and icon. Also disconnect the signal
	so it won't be called multiple times.
